--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -35,6 +35,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+	"com.unity.addressables": "1.1.4-preview"
   }
 }
