--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,7 +7,7 @@
     "com.unity.burst": "1.3.4",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.entities": "0.11.1-preview.4",
-    "com.unity.ide.rider": "2.0.7",
+    "com.unity.ide.rider": "2.0.0-preview",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.multiplayer-hlapi": "1.0.6",
     "com.unity.purchasing": "2.0.6",
